// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTemplate builds script template 1`] = `
"const qawolf = require(\\"qawolf\\");

const myScript = async context => {
  let page = await context.newPage();
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
};

exports.myScript = myScript;

if (require.main === module) {
  (async () => {
    const browser = await qawolf.launch();
    const context = await browser.newContext();
    await myScript(context);
    await browser.close();
  })();
}"
`;

exports[`buildTemplate builds test template 1`] = `
"const qawolf = require(\\"qawolf\\");

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  page = await context.newPage();
});

afterAll(() => browser.close());

test('myTest', async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate includes device if specified 1`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPhone 11\\"];

const myScript = async context => {
  let page = await context.newPage();
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
};

exports.myScript = myScript;

if (require.main === module) {
  (async () => {
    const browser = await qawolf.launch();
    const context = await browser.newContext({
      userAgent: device.userAgent,
      viewport: device.viewport
    });
    await myScript(context);
    await browser.close();
  })();
}"
`;

exports[`buildTemplate includes device if specified 2`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPad Mini\\"];

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext({
      userAgent: device.userAgent,
      viewport: device.viewport
    });
  page = await context.newPage();
});

afterAll(() => browser.close());

test('myTest', async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;
